nav fix, text align left bij persoonpagina

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ p, div{
 	z-index: 9999;
 	top: 0;
 	left: 0;
-	right:0;
+	width: 50%;
 }
 
 .navbar-brand {
